# LLM-Project

./: .dockerignore  .env  .gitignore  Dockerfile.fastapi  Dockerfile.streamlit  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
notebooks/: Preprocessing.ipynb  fine_tune.ipynb  pretraining.ipynb
src/RAG/: llm.py  rag_pipeline.py  run_rag_pipeline.py
src/api/: fastapi_app.py
src/app/: streamlit_app.py
src/inference_repo/: inference.py
src/model/: GPTModel.py
src/tokenizer/: base_tokenizer.py  regex_tokenizer.py  tokenizer_model.model  tokenizer_model.vocab
test/: test.py  test_api.py
